# badger-linear-algebra

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile
include/BadLinAlg/: CMakeLists.txt  darray.h  darray.hxx  matrix.h  matrix.hxx  vector.h  vector.hxx
src/: CMakeLists.txt  matrix.h  matrix.hxx  vector.h  vector.hxx
tests/: CMakeLists.txt  darray.cpp  matrix.cpp  msize.cpp  vector.cpp
